--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <script src="/node_modules/reflect-metadata/Reflect.js"></script>
     <script src="/node_modules/systemjs/dist/system.src.js"></script>
 
+    <script src="//hlweb.hobbylobby.corp/cdn/scripts/jquery/2.2.0/jquery.min.js"></script>
+    <script src="//hlweb.hobbylobby.corp/cdn/scripts/bootstrap/3.3.6/bootstrap.js"></script>
+    
+    
     <script src="/systemjs.config.js"></script>
     <script>
       System.import('app').catch(function(err){ console.error(err); });
