--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/content/font-awesome-4.6.3/css/font-awesome.css">
+    <link href="//hlweb.hobbylobby.corp/cdn/content/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Polyfill(s) for older browsers -->
     <script src="/node_modules/es6-shim/es6-shim.min.js"></script>
@@ -14,7 +16,6 @@
 
     <script src="//hlweb.hobbylobby.corp/cdn/scripts/jquery/2.2.0/jquery.min.js"></script>
     <script src="//hlweb.hobbylobby.corp/cdn/scripts/bootstrap/3.3.6/bootstrap.js"></script>
-    
     
     <script src="/systemjs.config.js"></script>
     <script>
